# Data-Engineering-Zoomcamp

./: .gitignore  README.md
01-docker-terraform/: README.md  pyproject.toml
01-docker-terraform/pipeline/: ingest_data.ipynb  ingest_data.py
02-workflow-orchestration/: README.md
03-data-warehouse/: .gitignore  README.md  load_yellow_taxi_data.py
04-analytics-engineering/: .gitignore  README.md  load_taxi_data.py
04-analytics-engineering/taxi_rides_ny/models/marts/: dim_stg_ftv.sql  schema.yml
04-analytics-engineering/taxi_rides_ny/models/staging/: schema.yml  sources.yml  stg_fhv_tripdata.sql
05-data-platforms/: README.md
05-data-platforms/pipeline/assets/ingestion/: payment_lookup.asset.yml  trips.py
05-data-platforms/pipeline/assets/staging/: trips.sql
