[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.2",
    "psycopg-binary>=3.3.2",
    "pyarrow>=22.0.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
    "fsspec>=2026.1.0",
    "requests>=2.32.5",
    "aiohttp>=3.13.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
